Mon Mar  2 10:50:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/handle.c (rb_dlhandle_sym): get rid of buffer overrun,
	  and try ASCII WINAPI versions too.

Mon Mar  2 10:29:17 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_longjmp), include/ruby/intern.h (ruby_cleanup): fixed
	  prototypes.

Mon Mar  2 00:56:45 2009  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/observer.rb: The module oberservable uses now a hash to
	  store listeners. merged a patch from Alessandro Di Maria in
	  [ruby-core:22560].

Sun Mar  1 22:59:41 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c: suppress warnings.

	* ext/socket/socket.c: ditto.

	* ext/socket/unixsocket.c: ditto.

Sun Mar  1 20:57:41 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ (rsock_getfamily): renamed from rb_sock_getfamily.

Sun Mar  1 19:52:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/win32/lib/Win32API.rb (initialize): passes res
	  arguments to DL.

Sun Mar  1 19:38:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/zlib/zlib.c (zstream_run): suppress a warning.  a patch from
	  Charlie Savage at [ruby-core:22607].

Sun Mar  1 19:36:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_dtoa): allocates one more byte to get rid of buffer
	  overrun.  a patch from Charlie Savage at [ruby-core:22604].

Sun Mar  1 19:10:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (.y.c): removed extra backslash.  [ruby-core:22602]

Sun Mar  1 19:02:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/cfunc.c (rb_dlcfunc_call): fix for stdcall and missing
	  argument numbers.  [ruby-core:22601]

	* ext/dl/dl.h (DLSTACK_PROTO0_): added.

	* ext/dl/mkcallback.rb (gencallback, gen_callback_file),
	  (rb_dl_init_callbacks): omit stdcall functions unless supported.

	* lib/rubygems/config_file.rb (SHGetFolderPath): stdcall.

Sun Mar  1 17:27:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
